# mlp

./: .gitignore  .markdownlintrc  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
configs/: dqn_baseline.yaml  ppo_baseline.yaml  ppo_v2.yaml  ppo_v3.yaml  ppo_v4.yaml  ppo_v5.yaml
database/: schema.sql  schema_migration_01.sql
docs/: ProjectDocumentation.md  Tasks Dashboard.md
docs/daily/: 2025-12-26.md  2025-12-27.md  2025-12-28.md  2025-12-29.md  2025-12-30.md  2025-12-31.md  2026-01-02.md  2026-01-03.md  2026-01-04.md  2026-01-10.md  2026-01-11.md  2026-01-12.md  2026-01-15.md  2026-01-17.md
docs/templates/: daily-fancy.md  daily.md  note-fancy.md  note.md  notebook-fancy.md  notebook.md
notebooks/: 01_environment_exploration.ipynb  02_baseline_vs_dqn_comparison.ipynb  03_ppo_vs_dqn_comparison.ipynb
scripts/: evaluate_model.py  random_agent.py  test_explore_env.py
src/environments/: mario_env.py  vec_mario_env.py  wrappers.py
src/training/: callbacks.py  train.py
src/utils/: db_logger.py
wandb/: latest-run
wandb/run-20251231_133323-u9uq236w/: run-u9uq236w.wandb
wandb/run-20251231_133323-u9uq236w/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20251231_140248-pao3rey2/: run-pao3rey2.wandb
wandb/run-20251231_140414-6xdnwp1j/: run-6xdnwp1j.wandb
wandb/run-20251231_140456-n15br5sj/: run-n15br5sj.wandb
wandb/run-20251231_140952-emzp9f88/: run-emzp9f88.wandb
wandb/run-20251231_142138-ttnyfubq/: run-ttnyfubq.wandb
wandb/run-20251231_143149-tuvj847p/: run-tuvj847p.wandb
~/: .marksman.toml
(+17 files in other folders)
